--- a/pod.yml
+++ b/pod.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: dys-container
+  name: dys-container0503
   labels:
-    app: dys-container
+    app: dys-container0503
 spec:
   containers:
-    - name: dys-container
+    - name: dys-container0503
       image: 482088842115.dkr.ecr.ap-south-1.amazonaws.com/node_docker
       ports:
         - containerPort: 8001
