--- a/deploy.yml
+++ b/deploy.yml
@@ -8,14 +8,14 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: nginx
+      app: dys-container0503
   template:
     metadata:
       labels:
-        app: nginx
+        app: dys-container0503
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: dys-container0503
+        image: 482088842115.dkr.ecr.ap-south-1.amazonaws.com/node_docker
         ports:
         - containerPort: 80
