--- a/deploy.yml
+++ b/deploy.yml
@@ -8,11 +8,11 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: dys-container0503
+      app: nginx
   template:
     metadata:
       labels:
-        app: dys-container0503
+        app: nginx
     spec:
       containers:
       - name: dys-container0503
