--- a/pod.yml
+++ b/pod.yml
@@ -7,6 +7,6 @@ metadata:
 spec:
   containers:
     - name: adi-demo
-      image: 482088842115.dkr.ecr.ap-south-1.amazonaws.com/node_docker
+      image: 482088842115.dkr.ecr.ap-south-1.amazonaws.com/node_dockers
       ports:
         - containerPort: 8001
